--- a/Calculadora/src/view/Calculadora.fxml
+++ b/Calculadora/src/view/Calculadora.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="325.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.CalculadoraController">
+<AnchorPane id="AnchorPane" prefHeight="325.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.CalculadoraController">
    <children>
       <TextField fx:id="txtNum1" layoutX="29.0" layoutY="64.0" />
       <TextField fx:id="txtNum2" layoutX="29.0" layoutY="112.0" />
