--- a/Calculadora/src/calculadora/view/Calculadora.fxml
+++ b/Calculadora/src/calculadora/view/Calculadora.fxml
@@ -14,14 +14,15 @@
       <Label layoutX="29.0" layoutY="47.0" text="Numero 1" />
       <Label layoutX="29.0" layoutY="95.0" text="Numero 2" />
       <Label layoutX="29.0" layoutY="197.0" text="Resultado" />
-      <TextField fx:id="txtOperador" layoutX="29.0" layoutY="163.0" prefHeight="25.0" prefWidth="53.0" />
-      <Label layoutX="29.0" layoutY="147.0" text="Operador" />
-      <Button layoutX="120.0" layoutY="272.0" mnemonicParsing="false" onAction="#calcular" text="Calcular" />
-      <TableView layoutX="211.0" layoutY="64.0" prefHeight="235.0" prefWidth="269.0">
+      <Button fx:id="btnSomar" layoutX="29.0" layoutY="268.0" mnemonicParsing="false" onAction="#somar" text="Somar" />
+      <TableView layoutX="229.0" layoutY="20.0" prefHeight="235.0" prefWidth="269.0">
         <columns>
           <TableColumn prefWidth="75.0" text="C1" />
           <TableColumn prefWidth="75.0" text="C2" />
         </columns>
       </TableView>
+      <Button fx:id="btnSubtrair" layoutX="104.0" layoutY="268.0" mnemonicParsing="false" onAction="#subtrair" text="Subtrair" />
+      <Button fx:id="btnDividir" layoutX="178.0" layoutY="268.0" mnemonicParsing="false" onAction="#dividir" text="Dividir" />
+      <Button layoutX="253.0" layoutY="268.0" mnemonicParsing="false" onAction="#multiplicar" text="Multiplicar" />
    </children>
 </AnchorPane>
